--- a/css/quiz-1.css
+++ b/css/quiz-1.css
@@ -63,3 +63,13 @@ body label {
 .btnn:hover {
   background-image: linear-gradient(to top, #08c5ff 0%, #1e14b4 100%);
 }
+
+@media (max-width: 785px) {
+  body h1 {
+    margin-top: 25%;
+  }
+
+  * {
+    font-family: sans-serif;
+  }
+}
